MIDIData/MIDIData.h

/* __stdcallの定義 */
/*
#ifndef __stdcall
#if defined(WINDOWS) || defined(_WINDOWS) || defined(__WINDOWS) || \
	defined(WIN32) || defined(_WIN32) || defined(__WIN32) || \
	defined(WIN64) || defined(_WIN64) || defined(__WIN64)
#define __stdcall __stdcall
#else
#define __stdcall
#endif
#endif
*/

/* MIDIEvent構造体 */
/* 双方向ダブルリンクリスト構造 */
/* ノード順序は絶対時刻で決定されます */
typedef struct tagMIDIEvent {
	long m_lTempIndex;                  /* このイベントの一時的なインデックス(0から始まる) */
	long m_lTime;                       /* 絶対時刻[Tick]又はSMPTEサブフレーム単位 */
	long m_lKind;                       /* イベントの種類(0x00～0xFF) */
	long m_lLen;                        /* イベントのデータ長さ[バイト] */
	unsigned char* m_pData;             /* イベントのデータバッファへのポインタ */
	unsigned long m_lData;              /* イベントのデータバッファ(MIDIチャンネルイベントのとき使う) */
	struct tagMIDIEvent* m_pNextEvent;  /* 次のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevEvent;  /* 前のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pNextSameKindEvent; /* 次の同じ種類のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevSameKindEvent; /* 前の同じ種類のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pNextCombinedEvent; /* 次の結合イベント保持用ポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevCombinedEvent; /* 前の結合イベント保持用ポインタ(なければNULL) */
	void* m_pParent;                    /* 親(MIDITrackオブジェクト)へのポインタ(なければNULL) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDIEvent;
/* MIDITrack構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDITrack {
	long m_lTempIndex;                  /* このトラックの一時的なインデックス(0から始まる) */
	long m_lNumEvent;                   /* トラック内のイベント数 */
	struct tagMIDIEvent* m_pFirstEvent; /* 最初のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pLastEvent;  /* 最後のイベントへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevTrack;  /* 前のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextTrack;  /* 次のトラックへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(MIDIDataオブジェクト)へのポインタ */
	long m_lInputOn;                    /* 入力(0=OFF, 1=On) */
	long m_lInputPort;                  /* 入力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lInputChannel;               /* 入力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lOutputOn;                   /* 出力(0=OFF, 1=On) */
	long m_lOutputPort;                 /* 出力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lOutputChannel;              /* 出力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lTimePlus;                   /* タイム+ */
	long m_lKeyPlus;                    /* キー+ */
	long m_lVelocityPlus;               /* ベロシティ+ */
	long m_lViewMode;                   /* 表示モード(0=通常、1=ドラム) */
	long m_lForeColor;                  /* 前景色 */
	long m_lBackColor;                  /* 背景色 */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDITrack;
/* MIDIData構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDIData {
	unsigned long m_lFormat;            /* SMFフォーマット(0/1) */
	unsigned long m_lNumTrack;          /* トラック数(0～∞) */
	unsigned long m_lTimeBase;          /* タイムベース(例：120) */
	struct tagMIDITrack* m_pFirstTrack; /* 最初のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pLastTrack;  /* 最後のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextSeq;    /* 次のシーケンスへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevSeq;    /* 前のシーケンスへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(常にNULL。将来ソングリストをサポート) */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDIData;
/* その他のマクロ */
#define MIDIEVENT_MAXLEN       65536
/* フォーマットに関するマクロ */
#define MIDIDATA_FORMAT0       0x00 /* フォーマット0 */
#define MIDIDATA_FORMAT1       0x01 /* フォーマット1 */
#define MIDIDATA_FORMAT2       0x02 /* フォーマット2 */
/* テンポに関するマクロ */
/* 注意：テンポの単位はすべて[マイクロ秒/tick]とする。 */
#define MIDIEVENT_MAXTEMPO     (16777216)
#define MIDIEVENT_MINTEMPO     (1)
#define MIDIEVENT_DEFTEMPO     (60000000/120)
/* トラック数に関するマクロ */
#define MIDIDATA_MAXMIDITRACKNUM 65535
/* タイムモードに関するマクロ */
#define MIDIDATA_TPQNBASE      0  /* TPQNベース */
#define MIDIDATA_SMPTE24BASE   24 /* 24フレーム/秒 */
#define MIDIDATA_SMPTE25BASE   25 /* 25フレーム/秒 */
#define MIDIDATA_SMPTE29BASE   29 /* 29.97フレーム/秒 */
#define MIDIDATA_SMPTE30BASE   30 /* 30フレーム/秒 */
/* タイムレゾリューション(分解能)に関するマクロ */
/* TPQNベースの場合：4分音符あたりの分解能 */
/* ★注意：普通TPQNの分解能は、24,48,72,96,120,144,168,192,216,240,360,384,480,960である */
#define MIDIDATA_MINTPQNRESOLUTION   1   /* TPQNレゾリューション最小値=1 */
#define MIDIDATA_MAXTPQNRESOLUTION   32767 /* TPQNレゾリューション最大値=32767 */
#define MIDIDATA_DEFTPQNRESOLUTION   120 /* TPQNレゾリューション標準値=120 */
/* SMPTEベースの場合：1フレームあたりの分解能 */
/* ★注意：普通SMPTEの分解能は、10,40,80などが代表的である */
#define MIDIDATA_MINSMPTERESOLUTION  1   /* SMPTEレゾリューション最小値=1 */
#define MIDIDATA_MAXSMPTERESOLUTION  255 /* SMPTEレゾリューション最大値=255 */
#define MIDIDATA_DEFSMPTERESOLUTION  10  /* SMPTEレゾリューション標準値=10 */
/* MIDIEVENT_KINDマクロ (コメントのカッコ内はデータ部の長さを示す) */
#define MIDIEVENT_SEQUENCENUMBER    0x00 /* シーケンスナンバー(2バイト) */
#define MIDIEVENT_TEXTEVENT         0x01 /* テキスト(可変長文字列) */
#define MIDIEVENT_COPYRIGHTNOTICE   0x02 /* 著作権(可変長文字列) */
#define MIDIEVENT_TRACKNAME         0x03 /* トラック名・シーケンサ名(可変長文字列) */
#define MIDIEVENT_INSTRUMENTNAME    0x04 /* インストゥルメント(可変長文字列) */
#define MIDIEVENT_LYRIC             0x05 /* 歌詞(可変長文字列) */
#define MIDIEVENT_MARKER            0x06 /* マーカー(可変長文字列) */
#define MIDIEVENT_CUEPOINT          0x07 /* キューポイント(可変長文字列) */
#define MIDIEVENT_PROGRAMNAME       0x08 /* プログラム名(可変長文字列) */
#define MIDIEVENT_DEVICENAME        0x09 /* デバイス名(可変長文字列) */
#define MIDIEVENT_CHANNELPREFIX     0x20 /* チャンネルプレフィックス(1バイト) */
#define MIDIEVENT_PORTPREFIX        0x21 /* ポートプレフィックス(1バイト) */
#define MIDIEVENT_ENDOFTRACK        0x2F /* エンドオブトラック(0バイト) */
#define MIDIEVENT_TEMPO             0x51 /* テンポ(3バイト) */
#define MIDIEVENT_SMPTEOFFSET       0x54 /* SMPTEオフセット(5バイト) */
#define MIDIEVENT_TIMESIGNATURE     0x58 /* 拍子記号(4バイト) */
#define MIDIEVENT_KEYSIGNATURE      0x59 /* 調性記号(2バイト) */
#define MIDIEVENT_SEQUENCERSPECIFIC 0x7F /* シーケンサー独自のイベント(可変長バイナリ) */
#define MIDIEVENT_NOTEOFF           0x80 /* ノートオフ(3バイト) */
#define MIDIEVENT_NOTEON            0x90 /* ノートオン(3バイト) */
#define MIDIEVENT_KEYAFTERTOUCH     0xA0 /* キーアフター(3バイト) */
#define MIDIEVENT_CONTROLCHANGE     0xB0 /* コントローラー(3バイト) */
#define MIDIEVENT_PROGRAMCHANGE     0xC0 /* プログラムチェンジ(2バイト) */
#define MIDIEVENT_CHANNELAFTERTOUCH 0xD0 /* チャンネルアフター(2バイト) */
#define MIDIEVENT_PITCHBEND         0xE0 /* ピッチベンド(3バイト) */
#define MIDIEVENT_SYSEXSTART        0xF0 /* システムエクスクルーシヴ(可変長バイナリ) */
#define MIDIEVENT_SYSEXCONTINUE     0xF7 /* システムエクスクルーシヴの続き(可変長バイナリ) */
/******************************************************************************/
/*                                                                            */
/*　MIDIDataLibクラス関数                                                     */
/*                                                                            */
/******************************************************************************/

/* デフォルト文字コードの設定 */
long __stdcall MIDIDataLib_SetDefaultCharCode (long lCharCode);
/******************************************************************************/
/*                                                                            */
/*　MIDIEventクラス関数                                                       */
/*                                                                            */
/******************************************************************************/

/* 注：__stdcallはWindows専用です。Linuxの場合は__stdcallを消してください */

/* 結合イベントの最初のイベントを返す。 */
/* 結合イベントでない場合、pEvent自身を返す。*/
MIDIEvent* __stdcall MIDIEvent_GetFirstCombinedEvent (MIDIEvent* pEvent);
/* 結合イベントの最後のイベントを返す。 */
/* 結合イベントでない場合、pEvent自身を返す。*/
MIDIEvent* __stdcall MIDIEvent_GetLastCombinedEvent (MIDIEvent* pEvent);
/* 単体イベントを結合する */
long __stdcall MIDIEvent_Combine (MIDIEvent* pEvent);
/* 結合イベントを切り離す */
long __stdcall MIDIEvent_Chop (MIDIEvent* pEvent);
/* MIDIイベントの削除(結合している場合でも単一のMIDIイベントを削除) */
long __stdcall MIDIEvent_DeleteSingle (MIDIEvent* pMIDIEvent);
/* MIDIイベントの削除(結合している場合、結合しているMIDIイベントも削除) */
long __stdcall MIDIEvent_Delete (MIDIEvent* pMIDIEvent);
/* MIDIイベント(任意)を生成し、MIDIイベントへのポインタを返す(失敗時NULL、以下同様) */
MIDIEvent* __stdcall MIDIEvent_Create 
(long lTime, long lKind, unsigned char* pData, long lLen);
/* 指定イベントと同じMIDIイベントを生成し、MIDIイベントへのポインタを返す(失敗時NULL、以下同様) */
MIDIEvent* __stdcall MIDIEvent_CreateClone (MIDIEvent* pMIDIEvent);
/* シーケンス番号イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateSequenceNumber
(long lTime, long lNum);
/* テキストイベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateTextEventA
(long lTime, const char* pszText);
#define MIDIEvent_CreateTextEvent MIDIEvent_CreateTextEventW
#define MIDIEvent_CreateTextEvent MIDIEvent_CreateTextEventA
/* 著作権イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateCopyrightNoticeA
(long lTime, const char* pszText);
#define MIDIEvent_CreateCopyrightNotice MIDIEvent_CreateCopyrightNoticeW
#define MIDIEvent_CreateCopyrightNotice MIDIEvent_CreateCopyrightNoticeA
/* トラック名イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateTrackNameA
(long lTime, const char* pszText);
#define MIDIEvent_CreateTrackName MIDIEvent_CreateTrackNameW
#define MIDIEvent_CreateTrackName MIDIEvent_CreateTrackNameA
/* インストゥルメント名イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateInstrumentNameA
(long lTime, const char* pszText);
#define MIDIEvent_CreateInstrumentName MIDIEvent_CreateInstrumentNameW
#define MIDIEvent_CreateInstrumentName MIDIEvent_CreateInstrumentNameA
/* 歌詞イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateLyricA
(long lTime, const char* pszText);
#define MIDIEvent_CreateLyric MIDIEvent_CreateLyricW
#define MIDIEvent_CreateLyric MIDIEvent_CreateLyricA
/* マーカーイベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateMarkerA
(long lTime, const char* pszText);
#define MIDIEvent_CreateMarker MIDIEvent_CreateMarkerW
#define MIDIEvent_CreateMarker MIDIEvent_CreateMarkerA
/* キューポイントイベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateCuePointA
(long lTime, const char* pszText);
#define MIDIEvent_CreateCuePoint MIDIEvent_CreateCuePointW
#define MIDIEvent_CreateCuePoint MIDIEvent_CreateCuePointA
/* プログラム名イベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateProgramNameA
(long lTime, const char* pszText);
#define MIDIEvent_CreateProgramName MIDIEvent_CreateProgramNameW
#define MIDIEvent_CreateProgramName MIDIEvent_CreateProgramNameA
/* デバイス名イベント生成 */
MIDIEvent* __stdcall MIDIEvent_CreateDeviceNameA
(long lTime, const char* pszText);
#define MIDIEvent_CreateDeviceName MIDIEvent_CreateDeviceNameW
#define MIDIEvent_CreateDeviceName MIDIEvent_CreateDeviceNameA
/* チャンネルプレフィックスイベントの生成 */
MIDIEvent* __stdcall MIDIEvent_CreateChannelPrefix (long lTime, long lCh);
/* トラックにエンドオブトラックイベントを生成して挿入 */
long __stdcall MIDITrack_InsertEndofTrack
(MIDITrack* pMIDITrack, long lTime);
/* トラックにノートイベントを生成して挿入 */
long __stdcall MIDITrack_InsertNote
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lKey, long lVel, long lDur);
/* MIDIデータの削除(含まれるトラック及びイベントもすべて削除) */
void __stdcall MIDIData_Delete (MIDIData* pMIDIData);
/* MIDIデータを生成し、MIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_Create (long lFormat, long lNumTrack, long lTimeMode, long lResolution);
/* MIDIデータの最初のトラックへのポインタを取得(なければNULL) */
MIDITrack* __stdcall MIDIData_GetFirstTrack (MIDIData* pMIDIData);
#define MIDIData_SaveAsSMF MIDIData_SaveAsSMFW
#define MIDIData_SaveAsSMF MIDIData_SaveAsSMFA