MIDIData/MIDIData.bas

'******************************************************************************
'*                                                                            *
'*　MIDIData.bas - MIDIDataモジュール(VB4,5,6用)            (C)2002-2015 くず *
'*                                                                            *
'******************************************************************************

'This library is free software; you can redistribute it and/or
'modify it under the terms of the GNU Lesser General Public
'License as published by the Free Software Foundation; either
'version 2.1 of the License, or (at your option) any later version.

'This library is distributed in the hope that it will be useful,
'but WITHOUT ANY WARRANTY; without even the implied warranty of
'MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
'Lesser General Public License for more details.

'You should have received a copy of the GNU Lesser General Public
'License along with this library; if not, write to the Free Software
'Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

'※このライブラリは、GNU 劣等一般公衆利用許諾契約書(LGPL)に基づき配布されます。
'※プロジェクトホームページ："http://openmidiproject.sourceforge.jp/index.html"

' ★使用例(4分音符の「ド」1音だけのMIDIデータを作成)
'Private Sub Command1_Click()
'    Dim pMIDIData As Long
'    Dim pMIDITrack As Long
'    pMIDIData = MIDIData_Create(MIDIDATA_FORMAT0, 1, MIDIDATA_TPQNBASE, 120)
'    pMIDITrack = MIDIData_GetFirstTrack(pMIDIData)
'    Call MIDITrack_InsertNote(pMIDITrack, 0, 0, 60, 100, 120)
'    Call MIDITrack_InsertEndofTrack(pMIDITrack, 120)
'    Call MIDIData_SaveAsSMF(pMIDIData, "Test1.mid")
'    Call MIDIData_Delete(pMIDIData)
'End Sub

Option Explicit

' ★重要：以下の構造体(ユーザー定義型)をVBで直接使ってはなりません。
' 　　　　MIDIEvent, MIDITrack, MIDIDataは、必ずLong型のポインタで指してください。

' MIDIEvent構造体(参考)
' 双方向ダブルリンクリスト構造
' ノード順序は絶対時刻で決定されます
Type MIDIEvent
    m_lTempIndex As Long
    m_lTime As Long                     ' 絶対時刻
    m_lKind As Long                     ' MIDIイベントの種類(= &H00～= &HFF)
    m_lLen As Long                      ' MIDIイベントのデータ長さ[バイト]
    m_pData As Long                     ' MIDIイベントのデータバッファへのポインタ
    m_lData As Long                     ' MIDIチャンネルイベントの場合のデータ格納場所
    m_pNextEvent As Long                ' 次のイベントへのポインタ(なければNULL)
    m_pPrevEvent As Long                ' 前のイベントへのポインタ(なければNULL)
    m_pNextSameKindEvent As Long        ' 次の同種のイベントへのポインタ(なければNULL)
    m_pPrevSameKindEvent As Long        ' 前の同種のイベントへのポインタ(なければNULL)
    m_pNextCombinedEvent As Long        ' 次の結合しているイベントへのポインタ(なければNULL)
    m_pPrevCombinedEvent As Long        ' 前の結合しているイベントへのポインタ(なければNULL)
    m_pParent As Long                   ' 親(MIDITrackオブジェクト)へのポインタ
    m_lUser1 As Long                    ' ユーザー用領域１(未使用)
    m_lUser2 As Long                    ' ユーザー用領域２(未使用)
    m_lUser3 As Long                    ' ユーザー用領域３(未使用)
    m_lUserFlag As Long                 ' ユーザー用フラグ(未使用)
End Type

' MIDITrack構造体(参考)
' 双方向リンクリスト構造
Type MIDITrack
    m_lTempIndex As Long
    m_lNumEvent As Long                 ' トラック内のイベント数
    m_pFirstEvent As Long               ' 最初のイベントへのポインタ(なければNULL)
    m_pLastEvent As Long                ' 最後のイベントへのポインタ(なければNULL)
    m_pPrevTrack As Long                ' 前のトラックへのポインタ(なければNULL)
    m_pNextTrack As Long                ' 次のトラックへのポインタ(なければNULL)
    m_pParent As Long                   ' 親(MIDIDataオブジェクト)へのポインタ
    m_lInputOn As Long                  ' 入力(0=OFF,1=ON)
    m_lInputPort As Long                ' 入力ポート(0～255)
    m_lInputChannel As Long             ' 入力チャンネル(-1=n/a, 0～15)
    m_lOutputOn As Long                 ' 出力(0=OFF, 1=ON)
    m_lOutputPort As Long               ' 出力ポート(0～255)
    m_lOutputChannel As Long            ' 出力チャンネル(-1=n/a, 0～15)
    m_lTimePlus As Long                 ' タイム+
    m_lKeyPlus As Long                  ' キー+
    m_lVelPlus As Long                  ' ベロシティ+
    m_lViewMode As Long                 ' 表示モード(0=通常,1=ドラム)
    m_lForeColor As Long                ' 前景色
    m_lBackColor As Long                ' 背景色
    m_lUser1 As Long                    ' ユーザー用自由領域１(未使用)
    m_lUser2 As Long                    ' ユーザー用自由領域２(未使用)
    m_lUser3 As Long                    ' ユーザー用領域３(未使用)
    m_lUserFlag As Long                 ' ユーザー用フラグ(未使用)
End Type

' MIDIData構造体(参考)
' 双方向リンクリスト構造
Type MIDIData
    m_lFormat As Long                   ' SMFフォーマット(0/1/2)
    m_lNumTrack As Long                 ' トラック数(1～65535)
    m_lTimeBase As Long                 ' タイムベース(例：120)
    m_pFirstTrack As Long               ' 最初のトラックへのポインタ(なければNULL)
    m_pLastTrack As Long                ' 最後のトラックへのポインタ(なければNULL)
    m_pNextSeq As Long                  ' 次のシーケンスへのポインタ(なければNULL)
    m_pPrevSeq As Long                  ' 前のシーケンスへのポインタ(なければNULL)
    m_pParent As Long                   ' 親(常にNULL)
    m_lUser1 As Long                    ' ユーザー用自由領域１(未使用)
    m_lUser2 As Long                    ' ユーザー用自由領域２(未使用)
    m_lUser3 As Long                    ' ユーザー用領域３(未使用)
    m_lUserFlag As Long                 ' ユーザー用フラグ(未使用)
End Type

' ロケールに関するマクロ
Public Const LC_ALL = 0

' その他のマクロ
Public Const MIDIEVENT_MAXLEN = 65536

' フォーマットに関するマクロ
Public Const MIDIDATA_FORMAT0 = 0
Public Const MIDIDATA_FORMAT1 = 1
Public Const MIDIDATA_FORMAT2 = 2

' トラック数に関するマクロ
Public Const MIDIDATA_MAXMIDITRACKNUM = 65535

' テンポに関するマクロ
' ★重要：テンポの単位はすべて[μ秒/4分音符]とする。
Public Const MIDIEVENT_MINTEMPO = 1
Public Const MIDIEVENT_MAXTEMPO = 60000000
Public Const MIDIEVENT_DEFTEMPO = 60000000 / 120

' タイムベース(タイムモード)に関するマクロ
Public Const MIDIDATA_TPQNBASE = 0
Public Const MIDIDATA_SMPTE24BASE = 24 '24フレーム/秒
Public Const MIDIDATA_SMPTE25BASE = 25 '25フレーム/秒
Public Const MIDIDATA_SMPTE29BASE = 29 '29.97フレーム/秒
Public Const MIDIDATA_SMPTE30BASE = 30 '30フレーム/秒

' タイムベース(レゾリューション)(分解能)に関するマクロ
' TPQNベースの場合：4分音符あたりの分解能
' ★注意：普通TPQNの分解能は、48,72,96,120,144,168,192,216,240,360,384,480,960である
Public Const MIDIDATA_MINTPQNRESOLUTION = 1
Public Const MIDIDATA_MAXTPQNRESOLUTION = 32767
Public Const MIDIDATA_DEFTPQNRESOLUTION = 120

' SMPTEベースの場合：1フレームあたりの分解能
' ★注意：普通SMPTEの分解能は、10,40,80などが代表的である。
Public Const MIDIDATA_MINSMPTERESOLUTION = 1
Public Const MIDIDATA_MAXSMPTERESOLUTION = 255
Public Const MIDIDATA_DEFSMPTERESOLUTION = 10

' MIDIEVENT_KINDマクロ (コメントのカッコ内はデータ部の長さを示す)
Public Const MIDIEVENT_SEQUENCENUMBER = &H0     ' シーケンス番号(2バイト)
Public Const MIDIEVENT_TEXTEVENT = &H1          ' テキスト(可変長文字列)
Public Const MIDIEVENT_COPYRIGHTNOTICE = &H2    ' 著作権(可変長文字列)
Public Const MIDIEVENT_TRACKNAME = &H3          ' トラック名(可変長文字列)
Public Const MIDIEVENT_INSTRUMENTNAME = &H4     ' インストゥルメント(可変長文字列)
Public Const MIDIEVENT_LYRIC = &H5              ' 歌詞(可変長文字列)
Public Const MIDIEVENT_MARKER = &H6             ' マーカー(可変長文字列)
Public Const MIDIEVENT_CUEPOINT = &H7           ' キューポイント(可変長文字列)
Public Const MIDIEVENT_PROGRAMNAME = &H8        ' プログラム名(可変長文字列)
Public Const MIDIEVENT_DEVICENAME = &H9         ' デバイス名(可変長文字列)
Public Const MIDIEVENT_CHANNELPREFIX = &H20     ' チャンネルプリフィックス(1バイト)
Public Const MIDIEVENT_PORTPREFIX = &H21        ' ポートプリフィックス(1バイト)
Public Const MIDIEVENT_ENDOFTRACK = &H2F        ' エンドオブトラック(なし)
Public Const MIDIEVENT_TEMPO = &H51             ' テンポ(3バイト)
Public Const MIDIEVENT_SMPTEOFFSET = &H54       ' SMPTEオフセット(5バイト)
Public Const MIDIEVENT_TIMESIGNATURE = &H58     ' 拍子記号(4バイト)
Public Const MIDIEVENT_KEYSIGNATURE = &H59      ' 調性記号(2バイト)
Public Const MIDIEVENT_SEQUENCERSPECIFIC = &H79 ' シーケンサー独自のイベント(可変長バイナリ)
Public Const MIDIEVENT_NOTEOFF = &H80           ' ノートオフ(3バイト)
Public Const MIDIEVENT_NOTEON = &H90            ' ノートオン(3バイト)
Public Const MIDIEVENT_KEYAFTERTOUCH = &HA0     ' キーアフター(3バイト)
Public Const MIDIEVENT_CONTROLCHANGE = &HB0     ' コントローラー(3バイト)
Public Const MIDIEVENT_PROGRAMCHANGE = &HC0     ' パッチチェンジ(2バイト)
Public Const MIDIEVENT_CHANNELAFTERTOUCH = &HD0 ' チャンネルアフター(2バイト)
Public Const MIDIEVENT_PITCHBEND = &HE0         ' ピッチベンド(3バイト)
Public Const MIDIEVENT_SYSEXSTART = &HF0        ' システムエクスクルーシヴ開始(可変長バイナリ)
Public Const MIDIEVENT_SYSEXCONTINUE = &HF0     ' システムエクスクルーシヴの続き(可変長バイナリ)

'*********************************************************************/
'*                                                                   */
'*　MIDIDataLibクラス関数                                            */
'*                                                                   */
'*********************************************************************/

Declare Function MIDIDataLib_SetDefaultCharCode Lib "MIDIData.dll" _
    (ByVal lCharCode As Long) As Long

'*********************************************************************/
'*                                                                   */
'*　MIDIEventクラス関数                                              */
'*                                                                   */
'*********************************************************************/

'★特記なき限り、正常終了時0以外、異常終了時0を返すものとする。
'★Is系関数は、特記なき限り、「はい」は0以外、「いいえ」は0を返すものとする。


' 結合イベントの最初のイベントを返す。
' 結合イベントでない場合、pEvent自身を返す。
Declare Function MIDIEvent_GetFirstCombinedEvent Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long) As Long

' 結合イベントの最後のイベントを返す。
' 結合イベントでない場合、pEvent自身を返す。
Declare Function MIDIEvent_GetLastCombinedEvent Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long) As Long

' 単体イベントを結合する
Declare Function MIDIEvent_Combine Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long) As Long

' 結合イベントを切り離す
Declare Function MIDIEvent_Chop Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long) As Long

' MIDIイベントの削除(結合している場合でも単一のMIDIイベントを削除)
Declare Sub MIDIEvent_DeleteSingle Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long)

' MIDIイベントの削除(結合している場合、結合しているMIDIイベントも削除)
Declare Sub MIDIEvent_Delete Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long)

' MIDIイベント(任意)を生成し、MIDIイベントへのポインタを返す(失敗時NULL、以下同様)
Declare Function MIDIEvent_Create Lib "MIDIData.dll" _
    (ByVal lTime As Long, ByVal lKind As Long, _
    ByRef pData As Byte, ByVal lLen As Long) As Long

' 指定イベントと同じMIDIイベントを生成し、MIDIイベントへのポインタを返す(失敗時NULL、以下同様)
Declare Function MIDIEvent_CreateClone Lib "MIDIData.dll" _
    (ByVal pMIDIEvent As Long) As Long

' シーケンス番号イベントの生成
Declare Function MIDIEvent_CreateSequenceNumber Lib "MIDIData.dll" _
    (ByVal lTime As Long, ByVal lNumber As Long) As Long

' テキストイベントの生成
Declare Function MIDIEvent_CreateTextEvent Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateTextEventA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' 著作権イベントの生成
Declare Function MIDIEvent_CreateCopyrightNotice Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateCopyrightNoticeA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' トラック名イベントの生成
Declare Function MIDIEvent_CreateTrackName Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateTrackNameA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' インストゥルメント名イベントの生成
Declare Function MIDIEvent_CreateInstrumentName Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateInstrumentNameA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' 歌詞イベントの生成
Declare Function MIDIEvent_CreateLyric Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateLyricA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' マーカーイベントの生成
Declare Function MIDIEvent_CreateMarker Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateMarkerA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' キューポイントイベントの生成
Declare Function MIDIEvent_CreateCuePoint Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateCuePointA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' プログラム名イベントの生成
Declare Function MIDIEvent_CreateProgramName Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateProgramNameA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' デバイス名イベントの生成
Declare Function MIDIEvent_CreateDeviceName Lib "MIDIData.dll" _
    Alias "MIDIEvent_CreateDeviceNameA" _
    (ByVal lTime As Long, ByVal strText As String) As Long

' チャンネルプリフィックスイベントの生成
Declare Function MIDIEvent_CreateChannelPrefix Lib "MIDIData.dll" _
    (ByVal lTime As Long, ByVal lChannel As Long) As Long
